# PlacingBenchmarkMetrics

image_difference/: xs.ini
image_difference/launch/: xs_camera.launch
image_difference/nodes/: image_diff.py
placing_metrics/: CMakeLists.txt
placing_metrics/src/: CMakeLists.txt  placing_metrics.cpp
